--- a/Dark_Iron_Dwarves/Localization/English/DID_English.xml
+++ b/Dark_Iron_Dwarves/Localization/English/DID_English.xml
@@ -4,7 +4,7 @@
 	<content contentuid="hb051bac1e30544d5a3bccaecda63035967d0" version="1">The molten rage of the dwarven race beats within a fiery heart. The Dark Iron clan is a veil of comradery hiding a poisonous visage. These spitfires know distrust as commonplace, for the venom of their kin's intentions are only comparable to the heat of their fury. They unite under common purpose: serving the dreaded Ragnaros in an eternal hunt to join their flesh to sacred fire. For what better to temper the Dark Iron than a raging, living flame?</content>
     <content contentuid="hc2d688985e7440cdb22ffeafc0ee9bf2babd" version="1">Maker's Fire</content>
 	<content contentuid="he77518e5b8444e5db02044c69e635d8daad0" version="1">Flamecap</content>
-	<content contentuid="" version="1"></content>
+	<content contentuid="h0a568bcaa3e7436e8d049e0e42501ce12ebf" version="1">Rocky Road</content>
 	<content contentuid="" version="1"></content>
 	<content contentuid="" version="1"></content>
 	<content contentuid="" version="1"></content>
