Part of the update

--- a/Dark_Iron_Dwarves/Localization/English/DID_English.xml
+++ b/Dark_Iron_Dwarves/Localization/English/DID_English.xml
@@ -8,6 +8,26 @@
 	<content contentuid="" version="1"></content>
 	<content contentuid="" version="1"></content>
 	<content contentuid="" version="1"></content>
+	<content contentuid="" version="1"></content>
+	<content contentuid="" version="1"></content>
+	<content contentuid="" version="1"></content>
+	<content contentuid="" version="1"></content>
+	<content contentuid="" version="1"></content>
+	<content contentuid="" version="1"></content>
+	<content contentuid="" version="1"></content>
+	<content contentuid="" version="1"></content>
+	<content contentuid="h36f464fa50494bd798b91d65fb63ee876e29" version="1"></content>
+	<content contentuid="" version="1"></content>
+	<content contentuid="" version="1"></content>
+	<content contentuid="" version="1"></content>
+	<content contentuid="" version="1"></content>
+	<content contentuid="" version="1"></content>
+	<content contentuid="" version="1"></content>
+	<content contentuid="" version="1"></content>
+	<content contentuid="" version="1"></content>
+	<content contentuid="" version="1"></content>
+	<content contentuid="" version="1"></content>
+	<content contentuid="" version="1"></content>
 	<content contentuid="h451acab63ed2416cac4e69cfdc624925ge0f" version="1">Iron Maiden</content>
 	<content contentuid="" version="1"></content>
 	<content contentuid="" version="1"></content>
@@ -33,4 +53,5 @@
 	<content contentuid="" version="1"></content>
 	<content contentuid="" version="1"></content>
 	<content contentuid="" version="1"></content>
+    <content contentuid="h36f464fa50494bd798b91d65fb63ee876e29" version="1">Enter initial handle content here</content>
 </contentList>
