--- a/Dark_Iron_Dwarves/Localization/English/DID_English.xml
+++ b/Dark_Iron_Dwarves/Localization/English/DID_English.xml
@@ -16,7 +16,7 @@
 	<content contentuid="" version="1"></content>
 	<content contentuid="" version="1"></content>
 	<content contentuid="" version="1"></content>
-	<content contentuid="h36f464fa50494bd798b91d65fb63ee876e29" version="1"></content>
+	<content contentuid="h36f464fa50494bd798b91d65fb63ee876e29" version="1">Magnetism</content>
 	<content contentuid="" version="1"></content>
 	<content contentuid="" version="1"></content>
 	<content contentuid="" version="1"></content>
@@ -53,5 +53,4 @@
 	<content contentuid="" version="1"></content>
 	<content contentuid="" version="1"></content>
 	<content contentuid="" version="1"></content>
-    <content contentuid="h36f464fa50494bd798b91d65fb63ee876e29" version="1">Enter initial handle content here</content>
 </contentList>
