--- a/Dark_Iron_Dwarves/Localization/English/DID_English.xml
+++ b/Dark_Iron_Dwarves/Localization/English/DID_English.xml
@@ -18,7 +18,7 @@
 	<content contentuid="" version="1"></content>
 	<content contentuid="h36f464fa50494bd798b91d65fb63ee876e29" version="1">Magnetism</content>
 	<content contentuid="ha88c54c8fd8d4113b9e099c74f2bb476898b" version="1">Law of Lava</content>
-	<content contentuid="" version="1"></content>
+	<content contentuid="hb13d267fc15547f092da3187ce7d35ccb438" version="1">Wicked Wizardry</content>
 	<content contentuid="" version="1"></content>
 	<content contentuid="" version="1"></content>
 	<content contentuid="" version="1"></content>
