--- a/Dark_Iron_Dwarves/Localization/English/DID_English.xml
+++ b/Dark_Iron_Dwarves/Localization/English/DID_English.xml
@@ -5,7 +5,7 @@
     <content contentuid="hc2d688985e7440cdb22ffeafc0ee9bf2babd" version="1">Maker's Fire</content>
 	<content contentuid="he77518e5b8444e5db02044c69e635d8daad0" version="1">Flamecap</content>
 	<content contentuid="h0a568bcaa3e7436e8d049e0e42501ce12ebf" version="1">Rocky Road</content>
-	<content contentuid="" version="1"></content>
+	<content contentuid="hbb85eda364264a0493f853e913e46f894g54" version="1">Braizen Boulder</content>
 	<content contentuid="" version="1"></content>
 	<content contentuid="" version="1"></content>
 	<content contentuid="" version="1"></content>
